# pylossmap_ml

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pytest.yml
pylossmap_ml/: db.py  utils.py  viz.py
pylossmap_ml/evaluation/: __init__.py  model.py
pylossmap_ml/fetching/: __init__.py  __main__.py  fetchers.py
pylossmap_ml/preprocessing/: __init__.py  __main__.py  preprocessor.py  spoolers.py  utils.py
pylossmap_ml/supervised/: evaluation.py  metadata.py  model.py  preprocessing.py
pylossmap_ml/training/: __init__.py  generator.py  model.py
pylossmap_ml/ufo_buster/: settings.py  ufo_buster.py
tests/data/: blm_dcum.h5  test_sample_blm_names.json
tests/unit/fetching/: test_fetchers.py
tests/unit/training/: test_generator.py
