[tool.poetry]
name = "pylossmap_ml"
version = "0.1.0"
description = ""
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.3"
numpy = "^1.19.0"
tqdm = "^4.59.0"
matplotlib = "^3.4.3"
tensorflow = "^2.6.0"
pytimber = "^3.2.1"
pylossmap = {git = "https://github.com/loiccoyle/pylossmap"}
tables = "^3.6.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
phomo = 'pylossmap_ml.fetching.__main__:main'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "accpy"
url = "http://acc-py-repo.cern.ch:8081/repository/vr-py-releases/simple"
default = true
